# sgaf

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
coverage/: index.html
coverage/src/: App.tsx.html  index.html
src/: App.css  App.tsx  index.css  main.tsx
src-python/: pyproject.toml  requirements-dev.txt  requirements.txt  sgaf.spec
src-python/app/: __init__.py  config.py  database.py  middleware.py
src-python/migrations/: 001_initial_schema.sql  002_seed_config.sql  003_add_logo.sql  004_pdf_tracking.sql  005_maintenance_events_schema.sql  006_add_closure_fields_to_maintenance.sql  007_remove_estimated_cost_from_maintenance.sql  008_add_asset_categories.sql  009_add_import_fields.sql  010_add_asset_photos.sql  011_asset_photos_cascade_index.sql  runner.py
src-python/scripts/: category_defaults.json  import_assets_csv.py
src-python/tests/: conftest.py  test_auth.py  test_category_defaults.py  test_config_setup.py  test_database.py  test_health.py  test_import_assets_csv.py  test_migrations.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db_config.rs  lib.rs  main.rs  sidecar.rs
src/hooks/: useAssets.ts  useAuditLog.ts  useConfig.ts  useDepreciation.ts  useMaintenance.ts  usePhotos.ts  useReports.ts
src/lib/: api.ts  queryClient.ts  tauri.ts
src/screens/: Dashboard.tsx  DbSetup.tsx  Login.tsx  SetupWizard.tsx
src/store/: appStore.ts
src/test/: App.test.tsx  AssetDetail.test.tsx  AssetForm.test.tsx  Login.test.tsx  (+8 more)
(+57 files in other folders)
