[package]
name = "sgaf"
version = "0.1.0"
description = "SGAF - Sistema de Gestión de Activos Fijos"
authors = ["Santiago"]
edition = "2021"

[lib]
name = "sgaf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
